--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,35 +3,39 @@
 
     <string name="title_section1">My Recipes</string>
     <string name="title_section2">Saved</string>
-    <string name="title_section3">People</string>
     <string name="title_section4">Profile</string>
 
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-
     <string name="action_example">Example action</string>
-
     <string name="action_settings">Settings</string>
-    <string name="insertRecipeButton">+\n NEW RECIPE</string>
+    <string name="action_favorite">Favorites</string>
+
     <string name="title_activity_new_recipe">NewRecipe</string>
+    <string name="title_activity_main">Cookbook</string>
+    <string name="title_activity_login">Login</string>
+    <string name="title_activity_open_recipe">OpenRecipe</string>
+    <string name="title_activity_favorites">Favorites</string>
+    <string name="title_activity_user_info">UserInfo</string>
+
 
     <string name="server">http://cookbook.nonagon.eu</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="TitleText">Title</string>
+
     <string name="PrepTime">Preparation time</string>
     <string name="CookTime">Cooking time</string>
     <string name="RecipeImage">recipeImage</string>
-    <string name="recipeImage1">recipeimage</string>
     <string name="photoUpload">Upload photo</string>
     <string name="ingredients">Ingredients</string>
+    <string name="steps">Steps</string>
     <string name="addIngredientButton">Add more</string>
     <string name="addStepButton">Add step</string>
-    <string name="steps">Steps</string>
-    <string name="title_activity_main">MainActivity</string>
-    <string name="title_activity_login">Login</string>
+    <string name="insertRecipeButton">+\n NEW RECIPE</string>
+
+
     <string name="loginButton">Log In</string>
     <string name="usernameTextView">Username</string>
     <string name="passwordTextView">Password</string>
-    <string name="title_activity_open_recipe">OpenRecipe</string>
+
+
 </resources>
