--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,20 @@
 <resources>
     <string name="app_name">Cookbook</string>
 
-    <string name="title_section1">My Recipes</string>
-    <string name="title_section2">Saved</string>
-    <string name="title_section4">Profile</string>
-
     <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
     <string name="action_favorite">Favorites</string>
+    <string name="action_search">Search</string>
 
-    <string name="title_activity_new_recipe">NewRecipe</string>
+
+    <string name="title_activity_new_recipe">New Recipe</string>
     <string name="title_activity_main">Cookbook</string>
     <string name="title_activity_login">Login</string>
-    <string name="title_activity_open_recipe">OpenRecipe</string>
+    <string name="title_activity_open_recipe">Open Recipe</string>
     <string name="title_activity_favorites">Favorites</string>
-    <string name="title_activity_user_info">UserInfo</string>
+    <string name="title_activity_user_info">User info</string>
+    <string name="title_activity_search">Search</string>
+
 
 
     <string name="server">http://cookbook.nonagon.eu</string>
@@ -31,14 +31,13 @@
     <string name="addIngredientButton">Add more</string>
     <string name="addStepButton">Add step</string>
     <string name="insertRecipeButton">+\n NEW RECIPE</string>
+    <string name="RecipeDescriptionText">Description</string>
+    <string name="rateRecipe">Rate this recipe!</string>
 
 
     <string name="loginButton">Log In</string>
     <string name="usernameTextView">Username</string>
     <string name="passwordTextView">Password</string>
-    <string name="RecipeDescriptionText">Description</string>
-    <string name="title_activity_search">Search</string>
-    <string name="action_search">action search</string>
 
 
 </resources>
