--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,11 @@
     <string name="app_name">Cookbook</string>
 
     <string name="action_example">Example action</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_logout">Logout</string>
     <string name="action_favorite">Favorites</string>
     <string name="action_search">Search</string>
+    <string name="action_settings">Settings</string>
+
 
 
     <string name="title_activity_new_recipe">New Recipe</string>
